@@ -631,6 +631,7 @@ CREATE TABLE `gnomex`.`FlowCellChannel` (
   `pipelineDate` DATETIME NULL,
   `pipelineFailed` CHAR(1) NULL,
   `isControl` CHAR(1) NULL,
+  `phiXErrorRate` DECIMAL(4, 4) NULL,
   PRIMARY KEY (`idFlowCellChannel`),
   CONSTRAINT `FK_FlowCellChannel_FlowCell` FOREIGN KEY `FK_FlowCellChannel_FlowCell` (`idFlowCell`)
     REFERENCES `gnomex`.`FlowCell` (`idFlowCell`)
